Fix overflow from long URLs
For example, makes "https://www.eff.org/files/cookieblocklist_new.txt"
wrap, avoiding the horizontal scrollbar on narrow displays.

--- a/assets/sass/components/_faq.scss
+++ b/assets/sass/components/_faq.scss
@@ -64,6 +64,10 @@
 }
 
 #faq-body {
+  a {
+    word-wrap: break-word;
+  }
+
   p {
     margin-bottom: 1.5rem;
   }
